@@ -5,6 +5,8 @@
 	* pure.cc, lexer.ll: Bugfix: include external symbols in command
 	completion.
 
+	* examples/poor.c: Add an example for the new public runtime API.
+
 	* interpreter.cc/h, runtime.cc/h, lib/strings.pure: Add error
 	reporting to the eval() routine.
 
